--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,362 +13,8 @@
 @import "typography";
 @import "mybuttons";
 @import "navigation";
+@import "layout";
 @import "sidebar";
+@import "content";
 @import "header";
 @import "footer";
-
-html, body {
-  height: 100%;
-}
-
-img {
-  max-width: 100%;
-}
-
-// ------------------------------------------
-// MAIN PART & ITS SECTIONS
-// ------------------------------------------
-.main {
-  z-index: 1000;
-  background: transparent;
-  position: relative;
-}
-
-.section, .elementor-section-wrap {
-  @include clip(true);
-  padding: $section-padding - 0px 0 0 0;
-  background: $white;
-  position: relative;
-
-  @include media-breakpoint-down(xs) {
-    padding: $section-padding / 2 - 20px 0 $section-padding / 2 + 30px 0;
-  }
-
-  &:last-child {
-    padding-bottom: $section-padding;
-  }
-
-  &__caption {
-    font-weight: normal;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 1rem;
-    letter-spacing: 2.5px;
-    font-weight: 600;
-    color: theme-color("primary");
-    margin: 0;
-  }
-
-  &__subcaption {
-    text-align: center;
-    font-size: 1.8rem;
-    font-weight: 300;
-    font-family: 'Montserrat', 'Open sans', Arial;
-    width: 80%;
-    color: $black;
-    margin: $spacer * 1.7 auto;
-    @include media-breakpoint-down(xs) {
-      line-height: 1.1em;
-    }
-  }
-
-  &__intro {
-    text-align: center;
-
-    @include media-breakpoint-up(sm) {
-      padding: 0 10vh;
-    }
-  }
-}
-
-
-.about {
-
-
-  &__specs {
-    @include media-breakpoint-up(md) {
-      width: 286px;
-      max-width: 100%;
-    }
-    @include media-breakpoint-down(sm) {
-      text-align: center;
-    }
-  }
-
-  &__social {
-    margin: 40px 0 0 0;
-    padding: 0;
-    > .social {
-      margin-bottom: 15px;
-    }
-    @include media-breakpoint-down(sm) {
-      text-align: center;
-      margin-top: 30px;
-      margin-bottom: 30px;
-    }
-  }
-
-  &__what {
-    font-family: "Open sans", Arial;
-    text-transform: uppercase;
-    font-size: 1.1rem;
-    font-weight: 400;
-
-    @include media-breakpoint-up(lg) {
-      font-size: 1.3rem;
-    }
-
-    span {
-      display: block;
-      margin-top: 10px;
-    }
-  }
-
-  &__img {
-    margin-bottom: 20px;
-  }
-
-  img {
-    width: 100%;
-    border-radius: 10px;
-    @include media-breakpoint-down(sm) {
-      max-width: 45%;
-      border-radius: 50%;
-    }
-  }
-  &__who {
-    font-weight: 300;
-    font-size: 1.4em;
-    line-height: 1.3;
-    color: theme-color("primary");
-  }
-  &__intro {
-    padding-left: 3vw;
-  }
-  &__project {
-    @include media-breakpoint-down(sm) {
-      text-align: center;
-
-      .divider {
-        margin-left: auto;
-        margin-right: auto;
-      }
-    }
-  }
-}
-
-// SOCIAL ICONS
-// ------------------------------------------
-.social {
-  margin: 0;
-  padding: 0;
-  display: inline-block;
-
-  & {
-    margin-right: 10px;
-  }
-  * {
-    vertical-align: middle;
-  }
-
-  a {
-    color: $gray-500;
-    text-decoration: none;
-    &:hover {
-      color: $gray-900;
-      .ion {
-        color: theme-color("primary");
-        background: $white;
-        transform: translate(0, -1px);
-        box-shadow: 0 3px 6px rgba(0, 0, 0, .1);
-      }
-    }
-  }
-
-  .ion {
-    font-size: 23px;
-    color: $white;
-    width: 40px;
-    height: 40px;
-    line-height: 39px;
-    border-radius: 50%;
-    background: theme-color("primary");
-    border: 1px solid theme-color("primary");
-    text-align: center;
-    margin: 0;
-    @include transition($transition-base);
-  }
-  span {
-    display: none;
-    font-size: .85rem;
-  }
-}
-
-// SECTION: SERVICES
-// ------------------------------------------
-.services {
-  background: $gray-100;
-  @include angle(before, true);
-
-  &__content {
-    margin-top: 30px;
-    margin-bottom: 30px;
-  }
-}
-
-.service {
-  background: $gray-100;
-  margin-bottom: 10px;
-  padding-top: 30px;
-  display: flex;
-  flex-direction: column;
-  &__caption {
-    background: $white;
-    padding: 15px 10px 25px 10px;
-    text-align: center;
-    font-size: 1.1rem;
-    text-transform: uppercase;
-    box-shadow: 0 3px 25px rgba(0, 0, 0, .05);
-  }
-  &__icon {
-    width: 40%;
-    margin: 0 auto 10px auto;
-    img {
-      max-width: 100%;
-    }
-  }
-
-  &__text {
-    flex: 1;
-    // display: flex;
-    // align-items: center;
-    background: $white;
-    font-size: .9rem;
-    // text-align: center;
-    padding: 4vh 4vh;
-    margin: 0;
-    box-shadow: 0 3px 25px rgba(0, 0, 0, .05);
-  }
-}
-
-// SECTION: WORKS
-// ------------------------------------------
-.works {
-  background: $white;
-  @include angle(before, true);
-
-  &__list {
-    margin: $spacer*5 0 0 0;
-  }
-}
-
-.work {
-
-  display: flex;
-  // align-items: center;
-
-  &.reorder {
-    .work__texts {
-      @include media-breakpoint-up(sm) {
-        text-align: right;
-      }
-      @include media-breakpoint-up(lg) {
-        padding: 1rem 0 0 7vh;
-      }
-    }
-
-    .work__img {
-      @include media-breakpoint-up(sm) {
-        margin-right: 30px;
-        order: 1;
-      }
-    }
-  }
-
-  &__texts {
-    flex: 1 0 0;
-    order: 2;
-    @include media-breakpoint-up(lg) {
-      padding: 1rem 7vh 0 0;
-    }
-  }
-
-  &__img {
-    flex: 1 0 0;
-    order: 3;
-    margin-left: 30px;
-
-    @include media-breakpoint-down(xs) {
-      display: none;
-    }
-
-    img {
-      width: 100%;
-    }
-  }
-
-  &__title {
-    text-transform: uppercase;
-    color: theme-color("primary");
-  }
-
-  &__services {
-    color: $gray-400;
-    font-size: .9rem;
-  }
-
-  &__text {
-    margin: $spacer*2 0 0 0;
-  }
-
-  &__actions {
-    margin: $spacer*2 0 $spacer 0;
-  }
-
-  &__btn-visit {
-    @extend .btn-secondary;
-  }
-
-  & + .work {
-    margin-top: $spacer * 4;
-    position: relative;
-    @include media-breakpoint-up(sm) {
-      margin-top: $spacer * 6;
-    }
-
-    &:before {
-      @include media-breakpoint-down(xs) {
-        content: " ";
-        display: block;
-        position: absolute;
-        background: theme-color("primary");
-        width: 60px;
-        height: 2px;
-        top: -$spacer*2.5;
-        left: 0;
-      }
-    }
-  }
-}
-
-
-// SECTION: CONTACT
-// ------------------------------------------
-.contact {
-  background: $white;
-  @include angle(before, true);
-}
-
-.form-group {
-  margin-bottom: $spacer;
-}
-
-.form-control {
-  border: 4px solid #e3e3e3;
-  padding: 7px;
-  width: 100%;
-  padding-left: 10px;
-  @include media-breakpoint-down(xs) {
-    margin-bottom: $spacer;
-  }
-}
