--- a/src/scss/_mymixins.scss
+++ b/src/scss/_mymixins.scss
@@ -76,23 +76,26 @@
 }
 
 @mixin clip($both: false) {
-  $thepath: 0% calc(0% + (28px * 3)), 100% 0%, 100% 100%, 0% 100%;
+  $thepath: 0% calc(0% + (3vh * 3)), 100% 0%, 100% 100%, 0% 100%;
   @if $both == true {
-    $thepath: 0% calc(0% + (28px * 3)), 100% 0%, 100% calc(100% - (28px * 3)), 0% 100%;
+    $thepath: 0% calc(0% + (3vh * 3)), 100% 0%, 100% calc(100% - (3vh * 3)), 0% 100%;
   }
 
   clip-path: polygon($thepath);
 
   &:before {
-    content: '';
-    background: $gray-300;
-    opacity: .85;
+    content: ' ';
+    background: $gray-400;
     position: absolute;
     width: 100%;
-    height: 190px;
-    top:-100px;
+    height: 188px;
     left: 0;
     clip-path: polygon($thepath);
+    top: -20.4vh;
+
+    @include media-breakpoint-up(sm) {
+      top: -15.3vh;
+    }
   }
 
   @if $both == true {
