--- a/src/scss/_mymixins.scss
+++ b/src/scss/_mymixins.scss
@@ -1,84 +1,9 @@
-// Angled edges, for details see https://www.viget.com/articles/angled-edges-with-css-masks-and-transforms
-@mixin angle($pseudo, $flip: false, $angle: 2.2deg) {
-  // Possible values for $pseudo are: before, after, both
-  @if $pseudo == 'before' or $pseudo == 'after' or $pseudo == 'both' {
-    position: relative;
-    z-index: 1;
-    $selector: if($pseudo == 'both', '&:before,&:after', '&:#{$pseudo}');
+@mixin clip($both: false, $h: 28px) {
+  $thepath: 0% calc(0% + #{$h * 3}), 100% 0%, 100% 100%, 0% 100%;
+  $thepathBoth: 0% calc(0% + #{$h * 3}), 100% 0%, 100% calc(100% - #{$h * 3}), 0% 100%;
 
-    #{$selector} {
-      background: inherit;
-      content: ' ';
-      display: block;
-      height: 100%;
-      left: 0;
-      position: absolute;
-      right: 0;
-      z-index: -1;
-      box-shadow: 0 -4px 0px rgba(0,0,0,.07);
-      -webkit-backface-visibility: hidden; // for Chrome Windows
-    }
-
-    @if $pseudo == 'before' {
-      #{$selector} {
-        top: 0;
-
-        @if $flip {
-          transform: skewY($angle * -1);
-          transform-origin: 0 0;
-        } @else {
-          transform: skewY($angle);
-          transform-origin: 100% 0;
-        }
-      }
-    }
-
-    @if $pseudo == 'after' {
-      #{$selector} {
-        bottom: 0;
-
-        @if $flip {
-          transform: skewY($angle);
-          transform-origin: 0 100%;
-        } @else {
-          transform: skewY($angle * -1);
-          transform-origin: 100%;
-        }
-      }
-    }
-
-    @if $pseudo == 'both' {
-      &:before {
-        top: 0;
-
-        @if $flip {
-          transform: skewY($angle * -1);
-          transform-origin: 0 0;
-        } @else {
-          transform: skewY($angle);
-          transform-origin: 100% 0;
-        }
-      }
-
-      &:after {
-        bottom: 0;
-
-        @if $flip {
-          transform: skewY($angle * -1);
-          transform-origin: 100%;
-        } @else {
-          transform: skewY($angle);
-          transform-origin: 0 0;
-        }
-      }
-    }
-  }
-}
-
-@mixin clip($both: false) {
-  $thepath: 0% calc(0% + (3vh * 3)), 100% 0%, 100% 100%, 0% 100%;
   @if $both == true {
-    $thepath: 0% calc(0% + (3vh * 3)), 100% 0%, 100% calc(100% - (3vh * 3)), 0% 100%;
+    $thepath: $thepathBoth;
   }
 
   clip-path: polygon($thepath);
@@ -91,10 +16,10 @@
     height: 188px;
     left: 0;
     clip-path: polygon($thepath);
-    top: -20.4vh;
+    top: -157px;
 
     @include media-breakpoint-up(sm) {
-      top: -15.3vh;
+      top: -100px;
     }
   }
 
