--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -4,7 +4,7 @@
   visibility: hidden;
   bottom: 0;
   position: fixed;
-  background: $gray-900 url(../images/footer.jpg) no-repeat center;
+  background: $gray-900 url(../images/footer2.jpg) no-repeat bottom;
   background-size: cover;
   color: $gray-500;
   font-size: .95rem;
@@ -12,7 +12,6 @@
   padding-top: 16rem;
   padding-bottom: 4rem;
 
-  @include clip();
   @include media-breakpoint-up(sm) {
     padding-bottom: 5rem;
   }
