inner page hero, based on home hero

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -41,26 +41,34 @@
 
   &__caption {
     opacity: .9;
-    font-size: calc(1.3rem + 4.2vw);
+    font-size: calc(1rem + 3.2vw);
     font-family: Montserrat, Helvetica, Arial, sans-serif;
     font-weight: 700;
     line-height: .95em;
     letter-spacing: .03em;
-    text-transform: uppercase;
     color: $black;
-    position: relative;
-    margin-top: 105px;
+    margin-top: 45px;
+    //text-align: center;
+    text-transform: uppercase;
 
-    &:after {
-      content: '';
-      background: $black;
-      opacity: .85;
-      position: absolute;
-      left: 0;
-      bottom: -25px;
-      width: 8rem;
-      height: 1px;
-      z-index: 1;
+
+    &-home {
+      font-size: calc(1.3rem + 4.2vw);
+      text-align: left;
+      position: relative;
+      margin-top: 105px;
+
+      &:after {
+        content: '';
+        background: $black;
+        opacity: .85;
+        position: absolute;
+        left: 0;
+        bottom: -25px;
+        width: 8rem;
+        height: 1px;
+        z-index: 1;
+      }
     }
   }
 
