--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -6,11 +6,12 @@ img {
   max-width: 100%;
 }
 
-.main {
+.elementor-inner {
   z-index: 1000;
+  padding-top: 330px;
   background: transparent;
   position: relative;
-  margin-bottom: 250px;
+  margin-bottom: 210px;
 }
 
 .side {
