Contact form - "Sent Ok" message styling

--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -55,3 +55,9 @@
   @extend .btn-lg;
   @extend .btn-primary;
 }
+
+div.wpcf7-mail-sent-ok {
+  background-color: #39bf1422;
+  padding: .5em 1em;
+  border:0 none;
+}
